검색중 로딩화면
로딩화면 추가
결과화면에 버튼액션 넣으려고 하는중

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SearchResult"></activity>
+        <activity android:name=".Loading"></activity>
+        <activity android:name=".SearchResult" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
