--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation 'com.soundcloud.android:android-crop:1.0.1@aar'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 }
